--- a/package.json
+++ b/package.json
@@ -5,40 +5,45 @@
   "version": "0.0.0",
   "module": "./dist/milkdown.es.js",
   "main": "./dist/milkdown.umd.js",
+  "homepage": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cyyjs/milkdown-full.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@milkdown/plugin-listener": "^6.2.0",
-    "vue": "^3.2.25",
-    "@babel/core": "^7.18.5",
-    "@milkdown/core": "^6.1.5",
-    "@milkdown/design-system": "^6.2.0",
-    "@milkdown/plugin-clipboard": "^6.1.5",
-    "@milkdown/plugin-cursor": "^6.1.5",
-    "@milkdown/plugin-diagram": "^6.2.0",
-    "@milkdown/plugin-emoji": "^6.1.5",
-    "@milkdown/plugin-history": "^6.1.5",
-    "@milkdown/plugin-indent": "^6.2.0",
-    "@milkdown/plugin-math": "^6.1.5",
-    "@milkdown/plugin-menu": "^6.2.0",
-    "@milkdown/plugin-prism": "^6.1.5",
-    "@milkdown/plugin-slash": "^6.1.5",
-    "@milkdown/plugin-tooltip": "^6.1.5",
-    "@milkdown/plugin-upload": "^6.2.0",
-    "@milkdown/preset-commonmark": "^6.1.5",
-    "@milkdown/preset-gfm": "^6.1.5",
-    "@milkdown/prose": "^6.2.0",
-    "@milkdown/theme-pack-helper": "^6.2.0",
-    "@milkdown/theme-tokyo": "^6.1.5",
-    "@milkdown/vue": "^6.1.5",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@babel/core": "^7.18.9",
+    "@milkdown/core": "^6.3.0",
+    "@milkdown/design-system": "^6.3.0",
+    "@milkdown/plugin-block": "^6.3.0",
+    "@milkdown/plugin-clipboard": "^6.3.0",
+    "@milkdown/plugin-cursor": "^6.3.0",
+    "@milkdown/plugin-diagram": "^6.3.0",
+    "@milkdown/plugin-emoji": "^6.3.0",
+    "@milkdown/plugin-history": "^6.3.0",
+    "@milkdown/plugin-indent": "^6.3.0",
+    "@milkdown/plugin-listener": "^6.3.0",
+    "@milkdown/plugin-math": "^6.3.0",
+    "@milkdown/plugin-menu": "^6.3.0",
+    "@milkdown/plugin-prism": "^6.3.0",
+    "@milkdown/plugin-slash": "^6.3.0",
+    "@milkdown/plugin-tooltip": "^6.3.0",
+    "@milkdown/plugin-upload": "^6.3.0",
+    "@milkdown/preset-commonmark": "^6.3.0",
+    "@milkdown/preset-gfm": "^6.3.0",
+    "@milkdown/prose": "^6.3.0",
+    "@milkdown/theme-pack-helper": "^6.3.0",
+    "@milkdown/theme-tokyo": "^6.3.0",
+    "@milkdown/vue": "^6.3.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "katex": "^0.16.0",
-    "vite": "^2.9.9",
-    "vite-plugin-libcss": "^1.0.5"
+    "vite": "^3.0.2",
+    "vite-plugin-libcss": "^1.0.5",
+    "vue": "^3.2.37"
   }
 }
