--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "url": "git@github.com:cyyjs/milkdown-vue.git"
   },
   "scripts": {
-    "precommit": "yarn lint",
     "dev": "vite",
     "build-demo": "DEMO=true vite build",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "files": [
     "dist"
@@ -33,7 +35,6 @@
     "vue"
   ],
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@codemirror/lang-markdown": "^6.0.0",
@@ -68,7 +69,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.2.0",
+    "husky": "^8.0.1",
     "katex": "^0.16.0",
+    "pinst": "^3.0.0",
     "vite": "^3.0.2",
     "vite-plugin-libcss": "^1.0.5",
     "vue": "^3.2.37"
