--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@codemirror/autocomplete": "^6.16.2",
+    "@codemirror/commands": "^6.5.0",
     "@codemirror/lang-markdown": "^6.0.0",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/search": "^6.5.6",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.26.3",
     "@milkdown/core": "^6.3.1",
     "@milkdown/design-system": "^6.3.1",
     "@milkdown/plugin-block": "^6.3.1",
@@ -56,9 +61,10 @@
     "@milkdown/preset-gfm": "^6.3.1",
     "@milkdown/prose": "^6.3.1",
     "@milkdown/theme-pack-helper": "^6.3.1",
+    "@milkdown/utils": "^6.5.4",
     "@milkdown/vue": "^6.3.1",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "eslint": "^8.20.0",
     "eslint-config-standard": "^17.0.0",
@@ -66,11 +72,12 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.3.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "katex": "^0.16.0",
     "pinst": "^3.0.0",
-    "vite": "^3.0.2",
-    "vite-plugin-libcss": "^1.0.5",
-    "vue": "^3.2.37"
+    "pug": "^3.0.3",
+    "vite": "^3.2.10",
+    "vite-plugin-libcss": "^1.1.1",
+    "vue": "^3.4.27"
   }
 }
