--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "milkdown-vue",
   "description": "milkdown vue 封装",
   "version": "1.0.3",
+  "type": "module",
   "main": "./dist/milkdown.esm.js",
   "exports": {
     ".": {
@@ -16,10 +17,11 @@
   },
   "scripts": {
     "dev": "vite",
-    "build-demo": "DEMO=true vite build",
+    "build-example": "EXAMPLE=true vite build",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
     "postinstall": "husky install",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable"
@@ -63,20 +65,19 @@
     "@milkdown/theme-pack-helper": "^6.3.1",
     "@milkdown/utils": "^6.5.4",
     "@milkdown/vue": "^6.3.1",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "@rushstack/eslint-patch": "^1.10.3",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/language-plugin-pug": "^2.0.19",
     "codemirror": "^6.0.1",
-    "eslint": "^8.20.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
     "husky": "^8.0.3",
     "katex": "^0.16.0",
     "pinst": "^3.0.0",
+    "prettier": "^3.3.0",
     "pug": "^3.0.3",
-    "vite": "^3.2.10",
+    "vite": "^5.2.12",
     "vite-plugin-libcss": "^1.1.1",
     "vue": "^3.4.27"
   }
