--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "milkdown-vue",
   "description": "milkdown vue 封装",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "type": "module",
   "main": "./dist/milkdown.esm.js",
   "exports": {
@@ -20,7 +20,7 @@
     "build-example": "EXAMPLE=true vite build",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint",
     "format": "prettier --write src/",
     "postinstall": "husky install",
     "prepack": "pinst --disable",
@@ -36,49 +36,62 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@codemirror/autocomplete": "^6.16.2",
-    "@codemirror/commands": "^6.5.0",
-    "@codemirror/lang-markdown": "^6.0.0",
-    "@codemirror/language": "^6.10.1",
+    "@codemirror/autocomplete": "^6.16.3",
+    "@codemirror/commands": "^6.6.0",
+    "@codemirror/lang-markdown": "^6.2.5",
+    "@codemirror/language": "^6.10.2",
     "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.26.3",
-    "@milkdown/core": "^6.3.1",
-    "@milkdown/design-system": "^6.3.1",
-    "@milkdown/plugin-block": "^6.3.1",
-    "@milkdown/plugin-clipboard": "^6.3.1",
-    "@milkdown/plugin-cursor": "^6.3.1",
-    "@milkdown/plugin-diagram": "^6.3.1",
-    "@milkdown/plugin-emoji": "^6.3.1",
-    "@milkdown/plugin-history": "^6.3.1",
-    "@milkdown/plugin-indent": "^6.3.1",
-    "@milkdown/plugin-listener": "^6.3.1",
-    "@milkdown/plugin-math": "^6.3.1",
+    "@codemirror/view": "^6.28.3",
+    "@eslint/js": "^9.6.0",
+    "@milkdown/core": "^7.4.0",
+    "@milkdown/ctx": "^7.4.0",
+    "@milkdown/design-system": "^6.5.4",
+    "@milkdown/plugin-block": "^7.4.0",
+    "@milkdown/plugin-clipboard": "^7.4.0",
+    "@milkdown/plugin-cursor": "^7.4.0",
+    "@milkdown/plugin-diagram": "^7.4.0",
+    "@milkdown/plugin-emoji": "^7.4.0",
+    "@milkdown/plugin-history": "^7.4.0",
+    "@milkdown/plugin-indent": "^7.4.0",
+    "@milkdown/plugin-listener": "^7.4.0",
+    "@milkdown/plugin-math": "^7.4.0",
     "@milkdown/plugin-menu": "^6.3.1",
-    "@milkdown/plugin-prism": "^6.3.1",
-    "@milkdown/plugin-slash": "^6.3.1",
-    "@milkdown/plugin-tooltip": "^6.3.1",
-    "@milkdown/plugin-upload": "^6.3.1",
-    "@milkdown/preset-commonmark": "^6.3.1",
-    "@milkdown/preset-gfm": "^6.3.1",
-    "@milkdown/prose": "^6.3.1",
-    "@milkdown/theme-pack-helper": "^6.3.1",
-    "@milkdown/utils": "^6.5.4",
-    "@milkdown/vue": "^6.3.1",
+    "@milkdown/plugin-prism": "^7.4.0",
+    "@milkdown/plugin-slash": "^7.4.0",
+    "@milkdown/plugin-tooltip": "^7.4.0",
+    "@milkdown/plugin-upload": "^7.4.0",
+    "@milkdown/preset-commonmark": "^7.4.0",
+    "@milkdown/preset-gfm": "^7.4.0",
+    "@milkdown/prose": "^7.4.0",
+    "@milkdown/theme-nord": "^7.4.0",
+    "@milkdown/theme-pack-helper": "^6.5.4",
+    "@milkdown/transformer": "^7.4.0",
+    "@milkdown/utils": "^7.4.0",
+    "@milkdown/vue": "^7.4.0",
+    "@prosemirror-adapter/vue": "^0.2.6",
     "@rushstack/eslint-patch": "^1.10.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/language-plugin-pug": "^2.0.19",
+    "@vue/language-plugin-pug": "^2.0.24",
+    "autoprefixer": "^10.4.19",
     "codemirror": "^6.0.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.6.0",
     "eslint-plugin-vue": "^9.26.0",
-    "husky": "^8.0.3",
-    "katex": "^0.16.0",
+    "globals": "^15.7.0",
+    "husky": "^9.0.11",
+    "katex": "^0.16.10",
+    "less": "^4.2.0",
     "pinst": "^3.0.0",
-    "prettier": "^3.3.0",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
     "pug": "^3.0.3",
-    "vite": "^5.2.12",
+    "tailwind-nord": "^1.3.0",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.2",
     "vite-plugin-libcss": "^1.1.1",
-    "vue": "^3.4.27"
+    "vue": "^3.4.31"
   }
 }
